--- a/AdminApp/package.json
+++ b/AdminApp/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.8",
+        "@meforma/vue-toaster": "^1.3.0",
         "@vitejs/plugin-vue": "^5.2.3"
     }
 }
