--- a/AdminApp/package.json
+++ b/AdminApp/package.json
@@ -16,6 +16,8 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.8",
         "@meforma/vue-toaster": "^1.3.0",
-        "@vitejs/plugin-vue": "^5.2.3"
+        "@vitejs/plugin-vue": "^5.2.3",
+        "vue-nprogress": "^0.2.0",
+        "vue3-easy-data-table": "^1.5.47"
     }
 }
